Moved IG files to root, changed IG id so URL makes more sense, added dependency on nl-core and zibs2020.

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -3,11 +3,11 @@
 # │  used properties are included. For a list of all supported properties and their functions,     │
 # │  see: https://fshschool.org/docs/sushi/configuration/.                                         │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
-id: fhir.example
-canonical: http://iknl.nl
-name: NKrIG
-# title: Example Title
-# description: Example Implementation Guide for getting started with SUSHI
+id: nkr
+canonical: http://fhir.iknl.nl
+name: NkrIG
+title: FHIR Implementatiegids voor de Nederlandse Kankerregistratie
+description: FHIR Implementatiegids voor de Nederlandse Kankerregistratie
 status: draft # draft | active | retired | unknown
 version: 0.1.0
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
@@ -16,14 +16,20 @@ releaseLabel: ci-build # ci-build | draft | qa-preview | ballot | trial-use | re
 # license: CC0-1.0 # https://www.hl7.org/fhir/valueset-spdx-license.html
 # jurisdiction: urn:iso:std:iso:3166#US "United States of America" # https://www.hl7.org/fhir/valueset-jurisdiction.html
 publisher:
-  name: IKNL
-  url: www.iknl.nl
-  # email: test@example.org
+  name: Integraal Kankercentrum Nederland
+  url: https://iknl.nl
+  email: fhir@iknl.nl
 
 # The dependencies property corresponds to IG.dependsOn. The key is the
 # package id and the value is the version (or dev/current). For advanced
 # use cases, the value can be an object with keys for id, uri, and version.
 #
+dependencies:
+  hl7.fhir.uv.ips: current
+  hl7.fhir.eu.extensions.r4: current
+  nictiz.fhir.nl.r4.nl-core: 0.10.0-beta.1
+  nictiz.fhir.nl.r4.zib2020: 0.10.0-beta.1
+
 # dependencies:
 #   hl7.fhir.us.core: 3.1.0
 #   hl7.fhir.us.mcode:
