--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -26,9 +26,9 @@ publisher:
 #
 dependencies:
   hl7.fhir.uv.ips: current
-  hl7.fhir.eu.extensions.r4: current
   nictiz.fhir.nl.r4.nl-core: 0.10.0-beta.1
   nictiz.fhir.nl.r4.zib2020: 0.10.0-beta.1
+  # hl7.fhir.eu.extensions.r4: current
 
 # dependencies:
 #   hl7.fhir.us.core: 3.1.0
