Add folder in path for package-feed.xml in workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -53,7 +53,7 @@ jobs:
       - run: ls -la
       
       - name: Copy the package feed
-        run: cp package-feed.xml output
+        run: cp package-feed/package-feed.xml output
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
