Add package iknl.fhir.nl.r4.ncr-ehr#1.0.1 to test package feed.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -52,8 +52,8 @@ jobs:
 
       - run: ls -la
       
-      - name: Copy the package feed
-        run: cp package-feed/package-feed.xml output
+      - name: Copy the packages + feed
+        run: cp -r packages/* output
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
