--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -28,6 +28,7 @@ dependencies:
   hl7.fhir.uv.ips: current
   nictiz.fhir.nl.r4.nl-core: 0.10.0-beta.1
   nictiz.fhir.nl.r4.zib2020: 0.10.0-beta.1
+  nictiz.fhir.nl.r4.medicationprocess9: 2.0.0-beta.5 
   # hl7.fhir.eu.extensions.r4: current
 
 # dependencies:
