--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -49,6 +49,9 @@ jobs:
       - name: Manually install medicationprocess9 dependency *with* snapshots
         run: tar xvzf vendor/nictiz.fhir.nl.r4.medicationprocess9-2.0.0-beta.5-snapshots.tgz -C ~/.fhir/packages/nictiz.fhir.nl.r4.medicationprocess9#2.0.0-beta.5
 
+      - name: remove duplicate values for meta.source-property of ValueSet-resources in the remedicationprocess9 package
+        run: find ~/.fhir/packages/nictiz.fhir.nl.r4.medicationprocess9#2.0.0-beta.5 -type f -name '*' -exec sed -i 's/\("meta":{\("lastUpdated":"[^"]*",\)\?\)"source":"http:\/\/decor\.nictiz\.nl\/fhir\/4.0\/mp-",/\1/' {} \;
+
       - name: Get IG Publisher jar
         run: curl -L https://github.com/HL7/fhir-ig-publisher/releases/latest/download/publisher.jar -o publisher.jar
 
