Some changes in configuration

--- a/ig.ini
+++ b/ig.ini
@@ -1,3 +1,3 @@
 [IG]
-ig = fsh-generated/resources/ImplementationGuide-nkr.json
+ig = fsh-generated/resources/ImplementationGuide-iknl.fhir.nl.r4.ncr-ehr.json
 template = fhir.base.template#current
