Nieuwe pagina's toegevoegd:  Versiebeheer  Selectie en abstractie epd data  Tekstuele wijzigingen

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -87,6 +87,8 @@ menu:
   Requirements: requirements.html
   Afwijkingen van zibs 2020: Afwijkingenvanzibs2020.html
   Profielen en conformance: Profielenenconformance.html
+  Versiebeheer: Versiebeheer.html
+  Selectie en abstractie: Selectieenabstractieepddata.html
   Artifacts: artifacts.html
 
 # ╭───────────────────────────Less Common Implementation Guide Properties──────────────────────────╮
