--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -9,10 +9,10 @@ name: iknl_ncr_ehr_r4
 title: FHIR Implementatiegids voor de Nederlandse Kankerregistratie
 description: Deze implementatiegids beschrijft hoe ziekenhuizen, epd-leveranciers en andere partijen die bevoegd zijn om data uit elektronische patiëntendossiers (epd's) of andere relevante databronnen te halen, verbinding kunnen maken met de Nederlandse Kankerregistratie (NKR).
 status: draft # draft | active | retired | unknown
-version: 0.1.0
+version: 1.2.0
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
 copyrightYear: 2024+
-releaseLabel: ci-build # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
+releaseLabel: release # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
 # license: CC0-1.0 # https://www.hl7.org/fhir/valueset-spdx-license.html
 # jurisdiction: urn:iso:std:iso:3166#US "United States of America" # https://www.hl7.org/fhir/valueset-jurisdiction.html
 publisher:
