--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -28,6 +28,7 @@ dependencies:
   nictiz.fhir.nl.r4.nl-core: 0.10.0-beta.1
   nictiz.fhir.nl.r4.zib2020: 0.10.0-beta.1
   nictiz.fhir.nl.r4.medicationprocess9: 2.0.0-beta.5 
+  hl7.terminology.r4: 6.1.0
 
 # dependencies:
 #   hl7.fhir.us.core: 3.1.0
